--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          ><span class="web">Web</span>Studio</a
+        >
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="studio" href="">Studio</a></li>
+          <li><a class="portfolio" href="">Portfolio</a></li>
+          <li><a class="contacts" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -64,24 +77,75 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img width="264" src="./images/img.jpg" alt="foto1">
+            <img width="264" src="./images/img.jpg" alt="foto1" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img width="264" src="./images/img(1).jpg" alt="foto2">
+            <img width="264" src="./images/img(1).jpg" alt="foto2" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img width="264" src="./images/img(2).jpg" alt="foto3">
+            <img width="264" src="./images/img(2).jpg" alt="foto3" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img width="264" src="./images/img(3).jpg" alt="foto4">
+            <img width="264" src="./images/img(3).jpg" alt="foto4" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img width="264" src="./images/Portfolio1.jpg" alt="Banking App" />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              width="264"
+              src="./images/Portfolio2.jpg"
+              alt="Cashless Payment"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              width="264"
+              src="./images/Portfolio3.jpg"
+              alt="Meditation App"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img width="264" src="./images/Portfolio4.jpg" alt="Taxi Service" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              width="264"
+              src="./images/Portfolio5.jpg"
+              alt="Screen Illustrations"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              width="264"
+              src="./images/Portfolio6.jpg"
+              alt="Online Courses"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
