--- a/index.html
+++ b/index.html
@@ -30,15 +30,25 @@
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="maill" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="phone-number" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
+      <section class="dark-bg">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="button" type="button">
+          <span class="button-text">Order Service</span>
+        </button>
       </section>
       <section>
         <h2>123</h2>
@@ -151,7 +161,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
