--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="light-bg">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -160,7 +160,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="dark-bg">
       <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
