--- a/index.html
+++ b/index.html
@@ -160,9 +160,11 @@
         </ul>
       </section>
     </main>
-    <footer class="dark-bg">
-      <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
-      <p>
+    <footer>
+      <a class="footer-logo" href="./index.html"
+        ><span class="footer-web">Web</span>Studio</a
+      >
+      <p class="footer-content">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
