--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <header>
       <nav>
         <a class="logo" href="./index.html"
-          ><span class="web">Web</span>Studio</a
+          >Web<span class="logo-studio">Studio</span></a
         >
         <ul>
-          <li><a class="studio" href="">Studio</a></li>
-          <li><a class="portfolio" href="">Portfolio</a></li>
-          <li><a class="contacts" href="">Contacts</a></li>
+          <li><a class="nav-list-item" href="./index.html">Studio</a></li>
+          <li><a class="nav-list-item" href="">Portfolio</a></li>
+          <li><a class="nav-list-item" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
             <a class="maill" href="mailto:info@devstudio.com"
@@ -45,17 +45,15 @@
     </header>
     <main>
       <section class="dark-bg">
-        <h1>Effective Solutions for Your Business</h1>
-        <button class="button" type="button">
-          <span class="button-text">Order Service</span>
-        </button>
+        <h1 class="h1-title">Effective Solutions for Your Business</h1>
+        <button class="button" type="button">Order Service</button>
       </section>
       <section>
         <h2>123</h2>
         <ul>
           <li>
-            <h3 class="strategy">Strategy</h3>
-            <p class="strategy-content">
+            <h3 class="h3-title">Strategy</h3>
+            <p class="content">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -112,13 +110,13 @@
         <h2>Our Portfolio</h2>
         <ul>
           <li>
-            <img width="264" src="./images/Portfolio1.jpg" alt="Banking App" />
+            <img width="360" src="./images/Portfolio1.jpg" alt="Banking App" />
             <h3>Banking App</h3>
             <p>App</p>
           </li>
           <li>
             <img
-              width="264"
+              width="360"
               src="./images/Portfolio2.jpg"
               alt="Cashless Payment"
             />
@@ -127,7 +125,7 @@
           </li>
           <li>
             <img
-              width="264"
+              width="360"
               src="./images/Portfolio3.jpg"
               alt="Meditation App"
             />
@@ -135,13 +133,13 @@
             <p>App</p>
           </li>
           <li>
-            <img width="264" src="./images/Portfolio4.jpg" alt="Taxi Service" />
+            <img width="360" src="./images/Portfolio4.jpg" alt="Taxi Service" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              width="264"
+              width="360"
               src="./images/Portfolio5.jpg"
               alt="Screen Illustrations"
             />
@@ -150,7 +148,7 @@
           </li>
           <li>
             <img
-              width="264"
+              width="360"
               src="./images/Portfolio6.jpg"
               alt="Online Courses"
             />
@@ -162,7 +160,7 @@
     </main>
     <footer>
       <a class="footer-logo" href="./index.html"
-        ><span class="footer-web">Web</span>Studio</a
+        >Web<span class="footer-studio">Studio</span></a
       >
       <p class="footer-content">
         Increase the flow of customers and sales for your business with digital
