--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="footer-logo" href="./index.html"
         >Web<span class="footer-studio">Studio</span></a
       >
