--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <address class="address">
         <ul>
           <li>
-            <a class="maill" href="mailto:info@devstudio.com"
+            <a class="address-items" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="phone-number" href="tel:+110001111111"
+            <a class="address-items" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -45,11 +45,11 @@
     </header>
     <main>
       <section class="dark-bg">
-        <h1 class="h1-title">Effective Solutions for Your Business</h1>
+        <h1 class="title">Effective Solutions for Your Business</h1>
         <button class="button" type="button">Order Service</button>
       </section>
       <section>
-        <h2>123</h2>
+        <h2 class="h2-title">123</h2>
         <ul>
           <li>
             <h3 class="h3-title">Strategy</h3>
@@ -59,22 +59,22 @@
             </p>
           </li>
           <li>
-            <h3 class="punctuality">Punctuality</h3>
-            <p class="punctuality-content">
+            <h3 class="h3-title">Punctuality</h3>
+            <p class="content">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="diligence">Diligence</h3>
-            <p class="diligence-content">
+            <h3 class="h3-title">Diligence</h3>
+            <p class="content">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="technologies">Technologies</h3>
-            <p class="technologies-content">
+            <h3 class="h3-title">Technologies</h3>
+            <p class="content">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -82,37 +82,37 @@
         </ul>
       </section>
       <section class="light-bg">
-        <h2>Our Team</h2>
+        <h2 class="h2-title">Our Team</h2>
         <ul>
           <li>
             <img width="264" src="./images/img.jpg" alt="foto1" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="h3-title">Mark Guerrero</h3>
+            <p class="content">Product Designer</p>
           </li>
           <li>
             <img width="264" src="./images/img(1).jpg" alt="foto2" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="h3-title">Tom Ford</h3>
+            <p class="content">Frontend Developer</p>
           </li>
           <li>
             <img width="264" src="./images/img(2).jpg" alt="foto3" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="h3-title">Camila Garcia</h3>
+            <p class="content">Marketing</p>
           </li>
           <li>
             <img width="264" src="./images/img(3).jpg" alt="foto4" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="h3-title">Daniel Wilson</h3>
+            <p class="content">UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="h2-title">Our Portfolio</h2>
         <ul>
           <li>
             <img width="360" src="./images/Portfolio1.jpg" alt="Banking App" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="h3-title">Banking App</h3>
+            <p class="content">App</p>
           </li>
           <li>
             <img
@@ -120,8 +120,8 @@
               src="./images/Portfolio2.jpg"
               alt="Cashless Payment"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="h3-title">Cashless Payment</h3>
+            <p class="content">Marketing</p>
           </li>
           <li>
             <img
@@ -129,13 +129,13 @@
               src="./images/Portfolio3.jpg"
               alt="Meditation App"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="h3-title">Meditation App</h3>
+            <p class="content">App</p>
           </li>
           <li>
             <img width="360" src="./images/Portfolio4.jpg" alt="Taxi Service" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="h3-title">Taxi Service</h3>
+            <p class="content">Marketing</p>
           </li>
           <li>
             <img
@@ -143,8 +143,8 @@
               src="./images/Portfolio5.jpg"
               alt="Screen Illustrations"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="h3-title">Screen Illustrations</h3>
+            <p class="content">Design</p>
           </li>
           <li>
             <img
@@ -152,8 +152,8 @@
               src="./images/Portfolio6.jpg"
               alt="Online Courses"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="h3-title">Online Courses</h3>
+            <p class="content">Marketing</p>
           </li>
         </ul>
       </section>
