--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
       <section class="light-bg">
         <h2 class="h2-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="list-item">
             <img width="264" src="./images/img.jpg" alt="foto1" />
             <h3 class="h3-title">Mark Guerrero</h3>
             <p class="content">Product Designer</p>
           </li>
-          <li>
+          <li class="list-item">
             <img width="264" src="./images/img(1).jpg" alt="foto2" />
             <h3 class="h3-title">Tom Ford</h3>
             <p class="content">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list-item">
             <img width="264" src="./images/img(2).jpg" alt="foto3" />
             <h3 class="h3-title">Camila Garcia</h3>
             <p class="content">Marketing</p>
           </li>
-          <li>
+          <li class="list-item">
             <img width="264" src="./images/img(3).jpg" alt="foto4" />
             <h3 class="h3-title">Daniel Wilson</h3>
             <p class="content">UI Designer</p>
