--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
         <h2 class="h2-title">123</h2>
         <ul>
           <li>
-            <h3 class="title-h3">Strategy</h3>
+            <h3 class="title-h">Strategy</h3>
             <p class="content">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="title-h3">Punctuality</h3>
+            <h3 class="title-h">Punctuality</h3>
             <p class="content">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="title-h3">Diligence</h3>
+            <h3 class="title-h">Diligence</h3>
             <p class="content">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="title-h3">Technologies</h3>
+            <h3 class="title-h">Technologies</h3>
             <p class="content">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -86,22 +86,22 @@
         <ul>
           <li class="list-item">
             <img width="264" src="./images/img.jpg" alt="foto1" />
-            <h3 class="title-h3">Mark Guerrero</h3>
+            <h3 class="title-h">Mark Guerrero</h3>
             <p class="content">Product Designer</p>
           </li>
           <li class="list-item">
             <img width="264" src="./images/img(1).jpg" alt="foto2" />
-            <h3 class="title-h3">Tom Ford</h3>
+            <h3 class="title-h">Tom Ford</h3>
             <p class="content">Frontend Developer</p>
           </li>
           <li class="list-item">
             <img width="264" src="./images/img(2).jpg" alt="foto3" />
-            <h3 class="title-h3">Camila Garcia</h3>
+            <h3 class="title-h">Camila Garcia</h3>
             <p class="content">Marketing</p>
           </li>
           <li class="list-item">
             <img width="264" src="./images/img(3).jpg" alt="foto4" />
-            <h3 class="title-h3">Daniel Wilson</h3>
+            <h3 class="title-h">Daniel Wilson</h3>
             <p class="content">UI Designer</p>
           </li>
         </ul>
@@ -111,7 +111,7 @@
         <ul>
           <li>
             <img width="360" src="./images/Portfolio1.jpg" alt="Banking App" />
-            <h3 class="title-h3">Banking App</h3>
+            <h3 class="title-h">Banking App</h3>
             <p class="content">App</p>
           </li>
           <li>
@@ -120,7 +120,7 @@
               src="./images/Portfolio2.jpg"
               alt="Cashless Payment"
             />
-            <h3 class="title-h3">Cashless Payment</h3>
+            <h3 class="title-h">Cashless Payment</h3>
             <p class="content">Marketing</p>
           </li>
           <li>
@@ -129,12 +129,12 @@
               src="./images/Portfolio3.jpg"
               alt="Meditation App"
             />
-            <h3 class="title-h3">Meditation App</h3>
+            <h3 class="title-h">Meditation App</h3>
             <p class="content">App</p>
           </li>
           <li>
             <img width="360" src="./images/Portfolio4.jpg" alt="Taxi Service" />
-            <h3 class="title-h3">Taxi Service</h3>
+            <h3 class="title-h">Taxi Service</h3>
             <p class="content">Marketing</p>
           </li>
           <li>
@@ -143,7 +143,7 @@
               src="./images/Portfolio5.jpg"
               alt="Screen Illustrations"
             />
-            <h3 class="title-h3">Screen Illustrations</h3>
+            <h3 class="title-h">Screen Illustrations</h3>
             <p class="content">Design</p>
           </li>
           <li>
@@ -152,7 +152,7 @@
               src="./images/Portfolio6.jpg"
               alt="Online Courses"
             />
-            <h3 class="title-h3">Online Courses</h3>
+            <h3 class="title-h">Online Courses</h3>
             <p class="content">Marketing</p>
           </li>
         </ul>
