--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <button class="button" type="button">Order Service</button>
       </section>
       <section>
-        <h2 class="h2-title">123</h2>
+        <h2 class="second_level_heading">123</h2>
         <ul>
           <li>
             <h3 class="title-h">Strategy</h3>
@@ -107,7 +107,7 @@
         </ul>
       </section>
       <section>
-        <h2 class="h2-title">Our Portfolio</h2>
+        <h2 class="second_level_heading">Our Portfolio</h2>
         <ul>
           <li>
             <img width="360" src="./images/Portfolio1.jpg" alt="Banking App" />
