--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </ul>
       </section>
       <section class="light-bg">
-        <h2 class="h2-title">Our Team</h2>
+        <h2 class="second_level_heading">Our Team</h2>
         <ul>
           <li class="list-item">
             <img width="264" src="./images/img.jpg" alt="foto1" />
